--- a/Ubee/Ubee.csproj
+++ b/Ubee/Ubee.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ubee.Service\Ubee.Service.csproj" />
+  </ItemGroup>
+
 </Project>
