fixed some bugs

--- a/Ubee.Service/Ubee.Service.csproj
+++ b/Ubee.Service/Ubee.Service.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\Ubee.Data\Ubee.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
